@@ -68,6 +68,7 @@ export(rk.XML.wizard)
 export(rk.build.plugin)
 export(rk.comment)
 export(rk.get.language)
+export(rk.get.rkh.prompter)
 export(rk.paste.JS)
 export(rk.paste.JS.graph)
 export(rk.plotOptions)
@@ -86,6 +87,7 @@ export(rk.rkh.technical)
 export(rk.rkh.title)
 export(rk.rkh.usage)
 export(rk.set.language)
+export(rk.set.rkh.prompter)
 export(rk.testsuite.doc)
 export(tf)
 exportClasses(rk.JS.arr)
