@@ -6,6 +6,7 @@
     \itemize{
       \item the \code{"show"} feature in \code{rk.plugin.skeleton()} was broken due to changes in the namespace defaults
       \item scanning plugin XML code for JS and help related content didn't work as expected in \code{rk.plugin.component()}
+      \item \code{rk.rkh.scan()} now also recognises <optioncolumn> and <matrix> nodes
     }
   }
 }
